# audiobook-ripper

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/audiobook_ripper/: __init__.py  __main__.py  app.py
src/audiobook_ripper/core/: __init__.py  container.py  interfaces.py  models.py
src/audiobook_ripper/services/: __init__.py  cd_drive.py  encoder.py  metadata.py  musicbrainz.py  ripper.py
src/audiobook_ripper/ui/: __init__.py  drive_selector.py  main_window.py  metadata_editor.py  progress_dialog.py  settings_dialog.py  track_list.py
src/audiobook_ripper/utils/: __init__.py  config.py  ffmpeg.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ui.py
tests/unit/: __init__.py  test_cd_drive.py  test_config.py  test_container.py  test_encoder.py  test_ffmpeg.py  test_metadata.py  test_models.py  test_musicbrainz.py  test_ripper.py
